# AutoLens

./: .gitignore  README.md
.claude/: settings.json
AutoLens/: .gitignore  BootstrapSplash.qml  CMakeLists.txt  LICENSE.txt  Main.qml  build.bat  build_installer.bat  build_output.txt  main.cpp
AutoLens/Docs/: Requiremnts.docx
AutoLens/installer/: AutoLens.nsi
AutoLens/qml/components/: CANConfigDialog.qml  SplashScreen.qml  StatusBar.qml
AutoLens/qml/pages/: DiagnosticsPage.qml  GeneratorPage.qml  SimulationPage.qml  TracePage.qml
AutoLens/resource/DBC/: Modified_MIB4_MIBCAN.dbc
AutoLens/src/app/: AppController.cpp  AppController.h  Logger.cpp  Logger.h
AutoLens/src/hardware/: CANInterface.cpp  CANInterface.h  DemoCANDriver.cpp  DemoCANDriver.h  VectorCANDriver.cpp  VectorCANDriver.h
AutoLens/src/trace/: TraceExporter.cpp  TraceExporter.h  TraceFilterProxy.cpp  TraceFilterProxy.h  TraceImporter.cpp  TraceImporter.h  TraceModel.cpp  TraceModel.h
